--- a/lang/th.json
+++ b/lang/th.json
@@ -15,5 +15,7 @@
     "chooseBusinessType": "เลือกประเภทธุระกิจ *",
     "pleaseAcceptTheTermsOfUse": "โปรดยอมรับข้อกำหนดการใช้งาน",
     "acceptThePOSApplication": "ฉันยอมรับ ข้อกำหนดการใช้งานของ POS Application และได้อ่านและยอมรับนโยบายความเป็นส่วนตัว แล้ว",
-    "youDon'tHaveAWebBrowser": "คุณไม่มีเว็บบราวเซอร์"
+    "youDon'tHaveAWebBrowser": "คุณไม่มีเว็บบราวเซอร์",
+    "charge": "ชำระเงิน",
+    "ticket": "ตั๋วออเดอร์"
 }
